2009-10-05  Carlos Alberto Cortez <calberto.cortez@gmail.com>

	* TabControl.cs: When removing a tab that was previously selected, set
	internally the value of selected_index to -1, to avoid trying to
	access the previous one when trying to set the new one (and was
	already removed from the collection). This is what .net seems to do
	too.
	Fixes #490937.

2009-10-05  Carlos Alberto Cortez <calberto.cortez@gmail.com>
	
	* X11Clipboard.cs: Actually look for the RtfText format when calling
	GetRftText in our clipboard formats list, instead of using the
	generical Text format.

2009-10-05  Carlos Alberto Cortez <calberto.cortez@gmail.com>

	* TextBox.cs: Process auto completion properly when we are using the
	internal source provided by ComboBox, and also remove some repeated
	checks.
	Fixes #489339.

2009-10-05  Carlos Alberto Cortez <calberto.cortez@gmail.com>

	* X11Structs:
	* X11Clipboard.cs: Move internal ClipboardStruct from X11Structs to
	its own file, since it is adding some functionality and thus is not a
	simple struct as before.
	* XplatUIX11.cs: Add support to store different formats that could
	have been specified by the user when puting data in the Clipboard -
	this is important when more than one format is supported (such plain
	text and rtf text). Update in the needed places, as well as simplify
	the code.
	Fixes #489625.

2009-10-05  Carlos Alberto Cortez <calberto.cortez@gmail.com>

	* XplatUIX11.cs: When handling the SelectionRequest event, use
	SelectionRequestEvent instead of SelectionEvent, so we get the right
	data for the app asking for clipboard data. Set the member of
	SelectioneEvent.property to indicate the place where we are storing
	the information as well - this is specially important for gnome/kde
	apps using the TARGETS atom to ask for the supported permission before
	actually asking for a specific format.
	Fixes #489393.

2009-10-05  Carlos Alberto Cortez <calberto.cortez@gmail.com>
